<resources>
    <string name="app_name">Opus</string>
    <string name="title_activity_gerenciar_perfil">GerenciarPerfilActivity</string>
    <string name="qtdVidas">Vidas: </string>
    <string name="txtProgressoModulo1">0/9</string>
    <string name="txtProgressoModulo2">0/4</string>
    <string name="txtProgressoModulo3">0/4</string>
    <string name="txtProgressoModulo4">0/5</string>
    <string name="txtProgressoModulo5">0/7</string>
    <string name="txtProgressoModulo6">0/3</string>
    <string name="txtProgressoModulo7">0/6</string>
    <string name="txtProgressoModulo8">0/3</string>
    <string name="txtTituloModulo1">CONCEITOS BÁSICOS</string>
    <string name="txtTituloModulo2">CONDIÇÕES E LOOPS</string>
    <string name="txtTituloModulo3">VETORES</string>
    <string name="txtTituloModulo4">FUNÇÕES</string>
    <string name="txtTituloModulo5">CLASSES E OBJETOS</string>
    <string name="txtTituloModulo6">DESAFIOS 1</string>
    <string name="txtTituloModulo7">CLASSES E OBJETOS 2</string>
    <string name="txtTituloModulo8">DESAFIOS 2</string>
    <string name="txtTituloModulo9">CERTIFICADO</string>
    <string name="mAbrir">Abrir navegação</string>
    <string name="mFechar">Fechar Navegação</string>
    <string name="hintEmail">Email</string>
    <string name="hintSenha">Senha</string>
    <string name="hintConfirmarSenha">Confirmar senha</string>
    <string name="nomeCompleto">Nome</string>
    <string name="txtCadastro">Criar conta</string>
    <string name="txtBemVindo">Bem-vindo!</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="fonteBotao">sans-serif</string>
    <string name="Enviar">Enviar</string>
    <string name="digiteEmail">Digite seu email</string>
    <string name="acao_opcoes">Configurações</string>
    <string name="nomeAppLogin"><![CDATA[</OPUS>]]></string>
    <string name="ou">ou</string>
    <string name="Entrar">Entrar</string>
    <string name="esqueceuSenha">Esqueceu sua senha?</string>
    <string name="BotaoCriarConta">CRIAR CONTA</string>
    <string name="TituloEtapa1Modulo1">1. Introdução</string>
    <string name="TituloEtapa2Modulo1">2. Algoritmos</string>
    <string name="TituloEtapa3Modulo1">3. Portugol</string>
    <string name="TituloEtapa4Modulo1">4. Olá, mundo!</string>
    <string name="TituloEtapa5Modulo1">5. Variáveis e constantes</string>
    <string name="TituloEtapa6Modulo1">6. Tipos de variáveis</string>
    <string name="TituloEtapa7Modulo1">7. Operadores aritméticos, lógicos e relacionais</string>
    <string name="TituloEtapa8Modulo1">8. Comentários em códigos</string>
    <string name="TituloEtapa9Modulo1">9. Prova 1</string>
    <string name="qtdQuestoesModulo1Etapa1">1 Questão</string>
    <string name="qtdQuestoesModulo1Etapa2">2 Questões</string>
    <string name="qtdQuestoesModulo1Etapa3">2 Questões</string>
    <string name="qtdQuestoesModulo1Etapa4">2 Questões</string>
    <string name="qtdQuestoesModulo1Etapa5">2 Questões</string>
    <string name="qtdQuestoesModulo1Etapa6">4 Questões</string>
    <string name="qtdQuestoesModulo1Etapa7">4 Questões</string>
    <string name="qtdQuestoesModulo1Etapa8">1 Questão</string>
    <string name="qtdQuestoesModulo1Etapa9">8 Questões</string>
    <string name="TituloEtapa1Modulo2">1. Estrutura de decisão simples</string>
    <string name="TituloEtapa2Modulo2">2. Estrutura de decisão composta</string>
    <string name="TituloEtapa3Modulo2">3. Estrutura de repetição <b>enquanto</b> (while)</string>
    <string name="TituloEtapa4Modulo2">4. Estrutura de repetição <b>para</b> (for)</string>
    <string name="TituloEtapa5Modulo2">5. Prova 2</string>
    <string name="qtdQuestoesModulo2Etapa1">X Questões</string>
    <string name="qtdQuestoesModulo2Etapa2">X Questões</string>
    <string name="qtdQuestoesModulo2Etapa3">X Questões</string>
    <string name="qtdQuestoesModulo2Etapa4">X Questões</string>
    <string name="qtdQuestoesModulo2Etapa5">4 Questões</string>
    <string name="TituloEtapa1Modulo3">1. Introdução a vetores (arrays)</string>
    <string name="TituloEtapa2Modulo3">2. Usando vetores em loops</string>
    <string name="TituloEtapa3Modulo3">3. Vetores em cálculos</string>
    <string name="TituloEtapa4Modulo3">4. Matrizes</string>
    <string name="TituloEtapa5Modulo3">5. Prova 3</string>
    <string name="qtdQuestoesModulo3Etapa1">X Questões</string>
    <string name="qtdQuestoesModulo3Etapa2">X Questões</string>
    <string name="qtdQuestoesModulo3Etapa3">X Questões</string>
    <string name="qtdQuestoesModulo3Etapa4">X Questões</string>
    <string name="qtdQuestoesModulo3Etapa5">4 Questões</string>
    <string name="TituloEtapa1Modulo4">1. Introdução à funções</string>
    <string name="TituloEtapa2Modulo4">2. Função com parâmetros</string>
    <string name="TituloEtapa3Modulo4">3. Função com múltiplos parâmetros</string>
    <string name="TituloEtapa4Modulo4">4. Retornos</string>
    <string name="TituloEtapa5Modulo4">5. Prova 4</string>
    <string name="qtdQuestoesModulo4Etapa1">X Questões</string>
    <string name="qtdQuestoesModulo4Etapa2">X Questões</string>
    <string name="qtdQuestoesModulo4Etapa3">X Questões</string>
    <string name="qtdQuestoesModulo4Etapa4">X Questões</string>
    <string name="qtdQuestoesModulo4Etapa5">4 Questões</string>
    <string name="TituloEtapa1Modulo5">1. Objetos</string>
    <string name="TituloEtapa2Modulo5">2. Classes</string>
    <string name="TituloEtapa3Modulo5">3. Abstração</string>
    <string name="TituloEtapa4Modulo5">4. Métodos</string>
    <string name="TituloEtapa5Modulo5">5. Métodos construtores</string>
    <string name="TituloEtapa6Modulo5">6. Encapsulamento</string>
    <string name="TituloEtapa7Modulo5">7. Prova 5</string>
    <string name="qtdQuestoesModulo5Etapa1">X Questões</string>
    <string name="qtdQuestoesModulo5Etapa2">X Questões</string>
    <string name="qtdQuestoesModulo5Etapa3">X Questões</string>
    <string name="qtdQuestoesModulo5Etapa4">X Questões</string>
    <string name="titulo1Modulo1Etapa1Licao1">1. Bem-vindo!</string>
    <string name="titulo0Modulo1Etapa1Licao2">1. Softwares</string>
    <string name="titulo1Modulo1Etapa1Licao2">2. Lógica de programação</string>
    <string name="titulo2Modulo1Etapa1Licao2">3. E o que é exatamente?</string>
    <string name="titulo3Modulo1Etapa1Licao2">4. Sequência lógica?</string>
    <string name="texto1Modulo1Etapa1Licao1">Neste curso você vai aprender lógica de programação de um jeito simples e intuitivo.
        \n\nEste curso foi criado com muito carinho por estudantes como você, pensando em você! Esperamos que você tenha uma boa experiência aqui conosco.
        Você verá que programar não é difícil, basta apenas que você se dedique aos estudos.
        \n\nE lembre-se: <b>seja paciente, e evite pular etapas.</b> Cada passo é muito importante na construção do seu conhecimento!
        \n\n<b>Um abraço, e bons estudos!
        \nEquipe Dagon.</b>
    </string>
    <string name="texto0Modulo1Etapa1Licao2">Todos os programas de computador, desde sistemas empresariais, aplicativos e até jogos, 
        são constituídos de uma coleção de <b>linhas de código</b>, ou <b>comandos</b>.
        \n\nOs computadores são extremamente eficientes para executar tarefas lógicas, muito mais eficientes que nós humanos. 
        Porém, há um problema: Os computadoressão <b> extremamente burros!</b> Calma lá, sabemos que eles são capazes de executar uma quantidade absurda de cálculos em frações
         de segundos&#8230; então por quê eles são burros?
        A razão é que os computadores <b>sabem apenas aquilo que são programados para fazer</b>. Qualquer função que não seja ensinada detalhadamente, passo a passo em uma ordem lógica
        para o computador, não funcionará corretamente e o programa provavelmente irá travar.
        \n\nPara construir um software que funcione de acordo com o esperado e que não trave, é necessário que ensinemos linha por linha para o computador como ele deve executar determinada tarefa
        seguindo uma ordem lógica. E é aí que entra o assunto desse curso, pequeno gafanhoto: a <b>lógica de programação.</b>
    </string>
    <string name="texto1Modulo1Etapa1Licao2">A lógica no desenvolvimento de sistemas é o coração de todo software construído na história da computação. 
        Por este motivo, é <b>muito importante
        que você reconheça o valor da lógica</b>, e a aprimore máximo que puder, para que sua jornada como desenvolvedor seja facilitada.
    </string>
    <string name="texto2Modulo1Etapa1Licao2" >Por definição, lógica de programação é a técnica de desenvolver instruções para o computador em uma
        <b>sequência lógica</b>, para atingir um determinado objetivo. Essas instruções são passadas para o computador através de uma <b>linguagem de programação</b>.
    </string>
    <string name="texto3Modulo1Etapa1Licao2" >Um conjunto de instruções organizadas em uma sequência lógica é chamada de <b>algoritmo</b> no mundo da programação.
        Um algoritmo nada mais é que um conjunto de passos que precisam ser dados
        para atingir determinado objetivo. Vamos estudar e explorar melhor isso nas próximas etapas.
        \n\nE é isso! Basicamente, a lógica de programação é usada para que possamos construir algoritmos com instruções para o computador executar tarefas dentro de um software.
    </string>
    <string name="dica0Modulo1Etapa1Licao2">No decorrer deste curso vamos lhe guiar pelos conceitos de lógica de programação,
        porém a lógica é um assunto vasto, e que está presente em quase todas as áreas da nossa vida! 
        Aprender a programar também ajuda a construir um cérebro mais <b>inteligente e racional</b>.
    </string>
    <string name="dica1Modulo1Etapa1Licao2">As linguagens de programação são como idiomas para o computador. Os computadores entendem tudo em <b>linguagem binária. 0 e 1.</b> Porém, como nós humanos temos uma estrutura de linguagem diferente de uma máquina, adaptamos nossos idiomas para intermediarem nossa comunicação com os computadores. Já pensou que complicado seria ter que escrever programas em zeros e uns?
        Através da linguagem de programação, um computador pode receber as instruções que escrevemos em uma linguagem amigável, converter para sequências binárias e executá-las. Existem várias linguagens de programação, e elas são diferentes entre si.
        Porém, todas obedecem um padrâo lógico básico.
    </string>
    <string name="Modulo1Etapa1Pergunta1">Qual alternativa melhor descreve a lógica de programação?</string>
    <string name="Modulo1Etapa1Pergunta1Alternativa1">Apenas uma maneira de como se pensar em programar</string>
    <string name="Modulo1Etapa1Pergunta1Alternativa2">Uma série de instruções aleatórias para o computador ler e se virar para saber o que ele deve fazer</string>
    <string name="Modulo1Etapa1Pergunta1Alternativa3">A técnica de desenvolver instruções para o computador em uma sequência lógica, para atingir um determinado objetivo</string>
    <string name="Modulo1Etapa1Pergunta1Alternativa4">Somente passos para executar uma tarefa com o computador</string>
    <string name="ProvaModulo1Pergunta4">O que são variáveis?</string>
    <string name="ProvaModulo1Pergunta4Alternativa1">Passos para resolver uma tarefa</string>
    <string name="ProvaModulo1Pergunta4Alternativa2">Espaços reservados na memória do computador que guardam um tipo de dado determinado</string>
    <string name="ProvaModulo1Pergunta4Alternativa3">Comandos que dizem para o computador o que ele deve fazer</string>
    <string name="ProvaModulo1Pergunta4Alternativa4">Linhas que são ignoradas pelo programa, mas que servem de guia para programadores entenderem o código</string>
    <string name="fonteQuestao">sans-serif-light</string>
    <string name="txtAvancar">AVANÇAR</string>
    <string name="txtChecar">CONFIRMAR</string>
    <string name="txtTentarNovamente">TENTAR NOVAMENTE</string>
</resources>