<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e7e7e7">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingContainerLicao"
        android:layout_margin="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Modulo1Etapa1Pergunta1"
            android:text="@string/Modulo1Etapa1Pergunta1"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/corTituloLicao"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:typeface="normal"
            android:fontFamily="@string/fonteQuestao" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_container_licao"
            android:layout_marginTop="40dp">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:id="@+id/radioGroupModulo1Etapa1Licao3">
                <RadioButton
                    android:text="@string/Modulo1Etapa1Pergunta1Alternativa1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/Modulo1Etapa1Pergunta1Alternativa1"
                    android:background="@drawable/borda_alternativa"
                    android:padding="5dp"
                    android:textSize="@dimen/textSizeAltenativa" />

                <RadioButton
                    android:text="@string/Modulo1Etapa1Pergunta1Alternativa2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/Modulo1Etapa1Pergunta1Alternativa2"
                    android:background="@drawable/borda_alternativa"
                    android:padding="5dp"
                    android:textSize="@dimen/textSizeAltenativa"
                    />

                <RadioButton
                    android:text="@string/Modulo1Etapa1Pergunta1Alternativa3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/Modulo1Etapa1Pergunta1Alternativa3"
                    android:background="@drawable/borda_alternativa"
                    android:padding="5dp"
                    android:textSize="@dimen/textSizeAltenativa"
                    />

                <RadioButton
                    android:text="@string/Modulo1Etapa1Pergunta1Alternativa4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/Modulo1Etapa1Pergunta1Alternativa4"
                    android:background="@drawable/borda_alternativa"
                    android:padding="5dp"
                    android:textSize="@dimen/textSizeAltenativa"
                    />
            </RadioGroup>

        </LinearLayout>

        <FrameLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            <Button
                android:text="@string/txtChecar"
                android:layout_width="120dp"
                android:layout_height="54dp"
                android:id="@+id/btnChecarResposta"
                android:layout_gravity="end"
                android:gravity="center_horizontal|center_vertical"
                android:background="@color/corBotaoVerde"
                android:textColor="#ffffff"
                android:padding="7dp"
                android:textSize="14sp"
                />

            <Button
                android:text="@string/txtTentarNovamente"
                android:layout_width="120dp"
                android:layout_height="54dp"
                android:id="@+id/btnTentarNovamente"
                android:layout_gravity="end"
                android:gravity="center_horizontal|center_vertical"
                android:background="@color/corBotaoVerde"
                android:textColor="#ffffff"
                android:padding="7dp"
                android:textSize="14sp"
                />

            <Button
                android:text="@string/txtAvancar"
                android:layout_width="120dp"
                android:layout_height="54dp"
                android:id="@+id/btnAvancar"
                android:layout_gravity="end"
                android:gravity="center_horizontal|center_vertical"
                android:background="@color/corBotaoVerde"
                android:textColor="#ffffff"
                android:padding="7dp"
                android:textSize="14sp"
                />

        </FrameLayout>
    </LinearLayout>

</ScrollView>