<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e7e7e7">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingContainerLicao"
        android:layout_margin="5dp"
        android:background="@drawable/borda_container_licao">
        <TextView
            android:text="@string/titulo0Modulo1Etapa1Licao2"
            android:id="@+id/txtTitulo0Modulo1Etapa1Licao2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/corTituloLicao"
            android:textSize="20sp"
             />

        <TextView
            android:text="@string/texto0Modulo1Etapa1Licao2"
            android:id="@+id/txtTexto0Modulo1Etapa1Licao2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="start|end"
            android:layout_gravity="end|center_vertical"
            android:paddingTop="@dimen/paddingTopoTextoLicao"
            android:paddingBottom="@dimen/paddingBaixoTextoLicao"
            android:lineSpacingExtra="2sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:text="@string/dica0Modulo1Etapa1Licao2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dica1Modulo1Etapa2Licao1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borda_pontilhada_verde"
                android:textColor="#ffffff"

                android:paddingLeft="80dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon_dica_verde"
                android:id="@+id/imgDica0"
                android:layout_gravity="start|center_vertical"
                android:paddingLeft="5dp"
                android:layout_margin="5dp" />

        </FrameLayout>

        <TextView
            android:text="@string/titulo1Modulo1Etapa1Licao2"
            android:id="@+id/txtTitulo1Modulo1Etapa1Licao2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/corTituloLicao"
            android:textSize="20sp"
             />

        <TextView
            android:text="@string/texto1Modulo1Etapa1Licao2"
            android:id="@+id/txtTexto1Modulo1Etapa1Licao2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="start|end"
            android:layout_gravity="end|center_vertical"
            android:paddingTop="@dimen/paddingTopoTextoLicao"
            android:paddingBottom="@dimen/paddingBaixoTextoLicao"
            android:lineSpacingExtra="2sp" />

        <TextView
            android:text="@string/titulo2Modulo1Etapa1Licao2"
            android:id="@+id/txtTitulo2Modulo1Etapa1Licao2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/corTituloLicao"
            android:textSize="20sp"
             />

        <TextView
            android:text="@string/texto2Modulo1Etapa1Licao2"
            android:id="@+id/txtTexto2Modulo1Etapa1Licao2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="start|end"
            android:layout_gravity="end|center_vertical"
            android:paddingTop="@dimen/paddingTopoTextoLicao"
            android:paddingBottom="@dimen/paddingBaixoTextoLicao"
            android:lineSpacingExtra="2sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:text="@string/dica1Modulo1Etapa1Licao2"
                android:id="@+id/dica1Modulo1Etapa1Licao2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borda_pontilhada_vermelha"
                android:textColor="#ffffff"
                android:paddingStart="80dp"
                android:paddingLeft="80dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" />

            <ImageView
                android:id="@+id/imgDica"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon_dica_vermelha"
                android:layout_gravity="start|center_vertical"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:layout_margin="5dp" />

        </FrameLayout>

        <TextView
            android:text="@string/titulo3Modulo1Etapa1Licao2"
            android:id="@+id/txtTitulo3Modulo1Etapa1Licao2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:textColor="@color/corTituloLicao"
            android:textSize="20sp"
             />

        <TextView
            android:text="@string/texto3Modulo1Etapa1Licao2"
            android:id="@+id/txtTexto3Modulo1Etapa1Licao2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="start|end"
            android:layout_gravity="end|center_vertical"
            android:paddingTop="@dimen/paddingTopoTextoLicao"
            android:paddingBottom="@dimen/paddingBaixoTextoLicao"
            android:lineSpacingExtra="2sp" />


        <Button
            android:text="@string/txtAvancar"
            android:id="@+id/btnAvancar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/corBtnModulo2"
            android:textColor="#ffffff"
            android:padding="10dp"/>
    </LinearLayout>



</ScrollView>