<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e7e7e7">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingContainerLicao"
        android:layout_margin="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ProvaModulo1Pergunta4"
            android:text="@string/ProvaModulo1Pergunta4"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/corTituloLicao"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:typeface="normal"
            android:fontFamily="@string/fonteQuestao" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_container_licao"
            android:layout_marginTop="20dp">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:id="@+id/radioGroupProvaModulo1Pergunta4">
                <RadioButton
                    android:text="@string/ProvaModulo1Pergunta4Alternativa1"
                    android:id="@+id/ProvaModulo1Pergunta4Alternativa1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/borda_alternativa"
                    android:padding="5dp"
                    android:textSize="@dimen/textSizeAltenativa" />

                <RadioButton
                    android:text="@string/ProvaModulo1Pergunta4Alternativa2"
                    android:id="@+id/ProvaModulo1Pergunta4Alternativa2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/borda_alternativa"
                    android:padding="5dp"
                    android:textSize="@dimen/textSizeAltenativa"
                    />

                <RadioButton
                    android:text="@string/ProvaModulo1Pergunta4Alternativa3"
                    android:id="@+id/ProvaModulo1Pergunta4Alternativa3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/borda_alternativa"
                    android:padding="5dp"
                    android:textSize="@dimen/textSizeAltenativa"
                    />

                <RadioButton
                    android:text="@string/ProvaModulo1Pergunta4Alternativa4"
                    android:id="@+id/ProvaModulo1Pergunta4Alternativa4"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:background="@drawable/borda_alternativa"
                    android:padding="5dp"
                    android:textSize="@dimen/textSizeAltenativa"
                    />
            </RadioGroup>

        </LinearLayout>

        <include layout="@layout/botoes_responder_questao"/>
    </LinearLayout>

</ScrollView>