<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CadastroActivity"
    android:background="@drawable/telaloginbackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtCadastro"
            android:id="@+id/txtCadastro"
            android:focusableInTouchMode="false"
            android:clickable="true"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="6dp"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp" />

        <EditText
                android:id="@+id/textNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="#d6d4d4"
                android:textColorHint="#d6d4d4"
                android:textColorLink="#d6d4d4"
                android:textColor="#d6d4d4"
                android:drawableStart="@android:drawable/ic_media_play"
                android:layout_gravity="center"
                android:hint="@string/nomeCompleto"
                android:maxLength="80"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:fontFamily="sans-serif-light"
                android:textSize="19sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/textEmail"
                android:hint="@string/hintEmail"
                android:textColorHighlight="#d6d4d4"
                android:textColorHint="#d6d4d4"
                android:textColorLink="#d6d4d4"
                android:textIsSelectable="false"
                android:textColor="#d6d4d4"
                android:drawableLeft="@drawable/login_icon"
                android:typeface="monospace"
                android:fontFamily="sans-serif-light"
                android:textSize="19sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/textSenha"
                android:textColorHighlight="#d6d4d4"
                android:textColorHint="#d6d4d4"
                android:textColorLink="#d6d4d4"
                android:textColor="#d6d4d4"
                android:drawableLeft="@drawable/password_icon"
                android:hint="@string/hintSenha"
                android:fontFamily="sans-serif-light"
                android:textSize="19sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/textCSenha"
                android:textColorHighlight="#d6d4d4"
                android:textColorHint="#d6d4d4"
                android:textColorLink="#d6d4d4"
                android:textColor="#d6d4d4"
                android:drawableLeft="@drawable/password_icon"
                android:hint="@string/hintConfirmarSenha"
                android:fontFamily="sans-serif-light"
                android:textSize="19sp" />


        <Button
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/btn_cadastra"
            android:text="@string/btnCadastrar"
            android:background="#37cc6c"
            android:textColor="#ffffff"
            android:textSize="@dimen/tamanhoTextoBotao"
            android:typeface="serif"
            android:fontFamily="@string/fonteBotao"
            android:singleLine="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp" />

    </LinearLayout>





</LinearLayout>
