<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingContainerLicao"
        android:layout_margin="5dp"
        android:background="@drawable/borda_container_licao">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/titulo1Modulo1Etapa1Licao1"
            android:textColor="@color/corTituloLicao"
            android:textSize="24sp"
            android:id="@+id/txtTitulo1Modulo1Etapa1Licao1" />

        <TextView
            android:text="@string/texto1Modulo1Etapa1Licao1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTexto1Modulo1Etapa1Licao1"
            android:textSize="16sp"
            android:gravity="start|end"
            android:layout_gravity="end"
            android:paddingTop="@dimen/paddingTopoTextoLicao"
            android:paddingBottom="@dimen/paddingBaixoTextoLicao" />

        <Button
            android:text="@string/txtAvancar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAvancar"
            android:layout_gravity="end"
            android:background="@color/corBtnModulo2"
            android:textColor="#ffffff"
            android:padding="10dp"/>
    </LinearLayout>


</ScrollView>